# slack-richpresence-vscode

./: .gitignore  CHANGELOG.md  README.md  package.json
slack_status_updater/: Cargo.toml
slack_status_updater/src/: lib.rs
src/: extension.ts
